--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> id ='header'> My personal recipes</h1>
+    <h1>My Personal Odin recipes</h1>
 </body>
 </html>
