--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>My Personal Odin recipes</h1>
+    <iframe src="https://giphy.com/embed/b75UnWR0XBss0" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen>
+    </iframe><p><a href="https://giphy.com/gifs/yummy-code-geass-anime-food-b75UnWR0XBss0"></a></p>
+    <div>
+        <ul>
+            <li><a href='.recipes/katsu.html'>Chicken Katsu</a></li>
+            <li><a href='.recipes/spagetti.html'> Spagetti and Meatballs</a></li>
+            <li><a href='.recipes/steak.html'>Steak</a></li>
+        </ul>
+    </div>
+    <a href="#header">Return to Top</a>
 </body>
 </html>
