--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </iframe><p><a href="https://giphy.com/gifs/yummy-code-geass-anime-food-b75UnWR0XBss0"></a></p>
     <div>
         <ul>
-            <li><a href='.recipes/katsu.html'>Chicken Katsu</a></li>
-            <li><a href='.recipes/spagetti.html'> Spagetti and Meatballs</a></li>
-            <li><a href='.recipes/steak.html'>Steak</a></li>
+            <li><a href='recipes/katsu.html'>Chicken Katsu</a></li>
+            <li><a href='recipes/spagetti.html'> Spagetti and Meatballs</a></li>
+            <li><a href='recipes/steak.html'>Steak</a></li>
         </ul>
     </div>
     <a href="#header">Return to Top</a>
