--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    <h1>My Personal Odin recipes</h1>
+    <div class = "title">
+    <h1>Odin Recipes</h1>
     <iframe src="https://giphy.com/embed/b75UnWR0XBss0" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen>
     </iframe><p><a href="https://giphy.com/gifs/yummy-code-geass-anime-food-b75UnWR0XBss0"></a></p>
-    <div>
+    <div class="title">
         <ul>
             <li><a href='recipes/katsu.html'>Chicken Katsu</a></li>
             <li><a href='recipes/spagetti.html'> Spagetti and Meatballs</a></li>
@@ -19,5 +20,6 @@
         </ul>
     </div>
     <a href="#header">Return to Top</a>
+    </div>
 </body>
 </html>
