--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     <h1>Odin Recipes</h1>
     <iframe src="https://giphy.com/embed/b75UnWR0XBss0" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen>
     </iframe><p><a href="https://giphy.com/gifs/yummy-code-geass-anime-food-b75UnWR0XBss0"></a></p>
-    <div class="title">
-        <ul>
-            <li><a href='recipes/katsu.html'>Chicken Katsu</a></li>
-            <li><a href='recipes/spagetti.html'> Spagetti and Meatballs</a></li>
-            <li><a href='recipes/steak.html'>Steak</a></li>
-        </ul>
+    <div class=>
+        <a href="recipes/katsu.html"><img id="katsu" src="images/Katsu.jpg"></a>
+        <p>Chicken Katsu</p>
     </div>
-    <a href="#header">Return to Top</a>
+        <a href="recipes/spagetti.html"><img id="spag" src="images/Spagetti.jpg"></a>
+        <p>Spagetti and Meatballs</p>
+    </div>
+    <div>
+        <a href="recipes/steak.html"><img id="steak" src="images/Steak.jpg"></a>
+        <p>Steak</p>
     </div>
 </body>
 </html>
