--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
     <h1>Odin Recipes</h1>
     <iframe src="https://giphy.com/embed/b75UnWR0XBss0" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen>
     </iframe><p><a href="https://giphy.com/gifs/yummy-code-geass-anime-food-b75UnWR0XBss0"></a></p>
-    <div class=>
-        <a href="recipes/katsu.html"><img id="katsu" src="images/Katsu.jpg"></a>
-        <p>Chicken Katsu</p>
-    </div>
-        <a href="recipes/spagetti.html"><img id="spag" src="images/Spagetti.jpg"></a>
-        <p>Spagetti and Meatballs</p>
-    </div>
-    <div>
-        <a href="recipes/steak.html"><img id="steak" src="images/Steak.jpg"></a>
-        <p>Steak</p>
+        <div class="imgcontainer">
+            <a href="recipes/katsu.html"><img id="katsu" src="images/Katsu.jpg"></a>
+            <p>Chicken Katsu</p>
+        </div>
+        <div class="imgcontainer">
+            <a href="recipes/spagetti.html"><img id="spag" src="images/Spagetti.jpg"></a>
+            <p>Spagetti and Meatballs</p>
+        </div>
+        <div class="imgcontainer">
+            <a href="recipes/steak.html"><img id="steak" src="images/Steak.jpg"></a>
+            <p>Steak</p>
+        </div>
     </div>
 </body>
 </html>
