--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -10,4 +10,7 @@
 <body>
     <h1>Pan Seared, Butter Basted Steak</h1>
 </body>
+<footer class="footer">
+    <p2>Created by Brandon Fan 2022</p2>
+</footer>
 </html>
