--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <iframe src="https://giphy.com/embed/b75UnWR0XBss0" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen>
         </iframe><p><a href="https://giphy.com/gifs/yummy-code-geass-anime-food-b75UnWR0XBss0"></a></p>
         </div>
+    <div class="content">
     <div class="imgcontainer">
         <a href="recipes/katsu.html"><img id="katsu" src="images/Katsu.jpg"></a>
         <p>Chicken Katsu</p>
@@ -24,6 +25,7 @@
     <div class="imgcontainer">
         <a href="recipes/steak.html"><img id="steak" src="images/Steak.jpg"></a>
         <p>Steak</p>
+    </div>
     </div>
 </body>
 <footer class="footer">
