added ingredients list

--- a/recipes/katsu.html
+++ b/recipes/katsu.html
@@ -9,6 +9,30 @@
 </head>
 <body>
     <h1>Chicken Katsu and Rice</h1>
+    <div>
+        <h1>Ingredients</h1>
+        <ul>
+            <li>
+                Chicken Tenders
+            </li>
+            <li>
+                Panko Breadcrumbs
+            </li>
+            <li>
+                Flour
+            </li>
+            <li>
+                Egg
+            </li>
+            <li>Salt and Ground Pepper</li>
+            <li>
+                Garlic Powder, Paprika, Cayenne Pepper
+            </li>
+            <li>
+                Vegetable Oil
+            </li>
+        </ul>
+    </div>
 </body>
 <footer class="footer">
     <p2>Created by Brandon Fan 2022</p2>
