--- a/recipes/katsu.html
+++ b/recipes/katsu.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>Chicken Katsu and Rice</h1>
-    <div>
+    <div class="ingredients">
+        <div class="left">
         <h1>Ingredients</h1>
         <ul>
             <li>
@@ -32,6 +33,7 @@
                 Vegetable Oil
             </li>
         </ul>
+        </div>
     </div>
 </body>
 <footer class="footer">
