made ingredients box

--- a/recipes/katsu.html
+++ b/recipes/katsu.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Chicken Katsu and Rice</h1>
-    <div class="ingredients">
+    <div>
         <h1>Ingredients</h1>
         <ul>
             <li>
