--- a/recipes/katsu.html
+++ b/recipes/katsu.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Chicken Katsu and Rice</h1>
-    <div>
+    <div class="left">
         <h1>Ingredients</h1>
         <ul>
             <li>
@@ -32,6 +32,9 @@
                 Vegetable Oil
             </li>
         </ul>
+    </div>
+    <div class="right">
+        <p>Test</p>
     </div>
 </body>
 <footer class="footer">
