--- a/recipes/katsu.html
+++ b/recipes/katsu.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Chicken Katsu and Rice</h1>
-    <div class="left">
+    <div>
         <h1>Ingredients</h1>
         <ul>
             <li>
@@ -32,9 +32,7 @@
                 Vegetable Oil
             </li>
         </ul>
-    </div>
-    <div class="right">
-        <p>Test</p>
+        <h2>Directions</h2>
     </div>
 </body>
 <footer class="footer">
