--- a/recipes/katsu.html
+++ b/recipes/katsu.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Chicken Katsu and Rice</h1>
+    <iframe width="1029" height="500" src="https://www.youtube.com/embed/D6diqH8RF4U" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+     encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div>
         <h1>Ingredients</h1>
         <ul>
