--- a/recipes/katsu.html
+++ b/recipes/katsu.html
@@ -15,25 +15,13 @@
     <div>
         <h1>Ingredients</h1>
         <ul>
-            <li>
-                Chicken Tenders
-            </li>
-            <li>
-                Panko Breadcrumbs
-            </li>
-            <li>
-                Flour
-            </li>
-            <li>
-                Egg
-            </li>
+            <li>Chicken Tenders</li>
+            <li>Panko Breadcrumbs</li>
+            <li>Flour</li>
+            <li>Egg</li>
             <li>Salt and Ground Pepper</li>
-            <li>
-                Garlic Powder, Paprika, Cayenne Pepper
-            </li>
-            <li>
-                Vegetable Oil
-            </li>
+            <li> Garlic Powder, Paprika, Cayenne Pepper</li>
+            <li>Vegetable Oil</li>
         </ul>
         <hr>
         <h2>Directions</h2>
