--- a/recipes/katsu.html
+++ b/recipes/katsu.html
@@ -9,25 +9,16 @@
 </head>
 <body>
     <h1>Chicken Katsu and Rice</h1>
-    <iframe width="1029" height="500" src="https://www.youtube.com/embed/D6diqH8RF4U" 
-    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
-     encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="left">
+        <p>test</p>
+    </div>
+    <div class="right">
+        <p>test</p>
+    </div>
     <div>
-        <h1>Ingredients</h1>
-        <ul>
-            <li>Chicken Tenders</li>
-            <li>Panko Breadcrumbs</li>
-            <li>Flour</li>
-            <li>Egg</li>
-            <li>Salt and Ground Pepper</li>
-            <li> Garlic Powder, Paprika, Cayenne Pepper</li>
-            <li>Vegetable Oil</li>
-        </ul>
-        <hr>
-        <h2>Directions</h2>
+        <footer class="footer">
+            <p2>Created by Brandon Fan 2022</p2>
+        </footer>
     </div>
 </body>
-<footer class="footer">
-    <p2>Created by Brandon Fan 2022</p2>
-</footer>
 </html>
