--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -9,6 +9,17 @@
 </head>
 <body>
     <h1>Pan Seared, Butter Basted Steak</h1>
+    <div class="left">
+        <p>test</p>
+    </div>
+    <div class="right">
+        <p>test</p>
+    </div>
+    <div>
+        <footer class="footer">
+            <p2>Created by Brandon Fan 2022</p2>
+        </footer>
+    </div>
 </body>
 <footer class="footer">
     <p2>Created by Brandon Fan 2022</p2>
