add ingredients and steps

--- a/recipes/katsu.html
+++ b/recipes/katsu.html
@@ -10,10 +10,28 @@
 <body>
     <h1>Chicken Katsu and Rice</h1>
     <div class="left">
-        <p>test</p>
+        <p>Ingredients</p>
+        <ul>
+            <li>Chicken Breast</li>
+            <li>Eggs</li>
+            <li>Panko Bread Crumbs</li>
+            <li>Vegetable Oil</li>
+            <li>Salt and Pepper</li>
+            <li>Garlic Powder</li>
+            <li>Flour</li>
+        </ul>
     </div>
     <div class="right">
-        <p>test</p>
+        <p>Instructions</p>
+        <ol>
+            <li>Make a flour mixture with the salt, pepper and garlic powder </li>
+            <li>Make an egg wash with beaten eggs</li>
+            <li>Make a panko mix with seasonings</li>
+            <li>Coat chicken in flour, then egg, then, panko</li>
+            <li>Preheat oil to 350F</li>
+            <li>Drop breaded chicken in oil until golden, repeat for all pieces</li>
+            <li>Serve</li>
+        </ol>
     </div>
     <div>
         <footer class="footer">
