--- a/recipes/spagetti.html
+++ b/recipes/spagetti.html
@@ -10,10 +10,10 @@
 <body>
     <h1>Spagetti and Meatballs</h1>
     <div class="left">
-        <p>test</p>
+        <p>Ingredients</p>
     </div>
     <div class="right">
-        <p>test</p>
+        <p>Instructions</p>
     </div>
     <div>
         <footer class="footer">
