--- a/recipes/spagetti.html
+++ b/recipes/spagetti.html
@@ -11,9 +11,27 @@
     <h1>Spagetti and Meatballs</h1>
     <div class="left">
         <p>Ingredients</p>
+        <ul>
+            <li>Tomato Sauce</li>
+            <li>Spagetti</li>
+            <li>Salt, Pepper, Garlic powder, onion powder, paprika</li>
+            <li>Panko Bread Crumbs</li>
+            <li>Egg</li>
+            <li>Parmesan Cheese</li>
+        </ul>
     </div>
     <div class="right">
         <p>Instructions</p>
+        <ol>
+            <li>Make meatballs by combining seasonings, ground beef, panko and eggs</li>
+            <li>Form into balls</li>
+            <li>Cook pasta</li>
+            <li>Sear and cook meatballs</li>
+            <li>Heat up sauce and place meatballs in sauce to finishing cooking</li>
+            <li>After pasta is cooked, toss in sauce</li>
+            <li>Plate pasta with meatballs and grate cheese over</li>
+            <li>Serve</li>
+        </ol>
     </div>
     <div>
         <footer class="footer">
