--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -11,9 +11,26 @@
     <h1>Pan Seared, Butter Basted Steak</h1>
     <div class="left">
         <p>Ingredients</p>
+        <ul>
+            <li>New York Strip</li>
+            <li>Olive Oil</li>
+            <li>Butter</li>
+            <li>Thyme</li>
+            <li>Rosemary</li>
+            <li>Garlic</li>
+            <li>Salt and Pepper</li>
+        </ul>
     </div>
     <div class="right">
         <p>Instructions</p>
+        <ol>
+            <li>Season the steak</li>
+            <li>Preheat the pan and then sear on side of the steak for 2 minutes</li>
+            <li>Flip and repeat until cook to desired doneness</li>
+            <li>Put butter, garlic, thyme and rosemary in pan then baste steak</li>
+            <li>Leave steak to rest</li>
+            <li>Serve</li>
+        </ol>
     </div>
     <div>
         <footer class="footer">
